# app/Model/Governorate.php
@@ -1,14 +1,20 @@
 <?php
-/**
- * @OA\Tag(
- *     name="Governorate",
- *     description="Sample APIs Everything about your Governorate ",
- * )
-**/
+
 namespace App\Model;
 
 use Illuminate\Database\Eloquent\Model;
 use Illuminate\Database\Eloquent\softDeletes;
+
+/**
+ * @OA\Schema(
+ *     title="Governorate",
+ *     description="Governorate model",
+ *     @OA\Xml(
+ *         name="Governorate"
+ *     )
+ * )
+ */
+
 class Governorate extends Model
 {
     //
